# TheSpiritWithinUs

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
src/: attack.c  clear.c  damage.c  damage.h  end.c  expand.c  expand.h  fire.c  flashback.c  fox.c  health.c  inventory.c  inventory2.c  location.c  main.c  manual.c  match.c  match.h  misc.c  misc.h  move.c  move.h  noun.c  noun.h  object.awk  onoff.c  openclose.c  parsexec.c  parsexec.h  reach.c  reach.h  toggle.c  toggle.h  turn.c
